Fixed icon list alignment

--- a/assets/dev/scss/frontend/widgets/icon-list.scss
+++ b/assets/dev/scss/frontend/widgets/icon-list.scss
@@ -7,8 +7,34 @@
 
 		.elementor-icon-list-item {
 
+			&, a {
+				justify-content: center;
+			}
+
 			&:after {
 				margin: auto;
+			}
+		}
+	}
+
+	&.elementor-align-left {
+
+		.elementor-icon-list-item {
+
+			&, a {
+				justify-content: flex-start;
+				text-align: $start;
+			}
+		}
+	}
+
+	&.elementor-align-right {
+
+		.elementor-icon-list-item {
+
+			&, a {
+				justify-content: flex-end;
+				text-align: $end;
 			}
 		}
 	}
